--- a/cplans/home/templates/home/home_page.html
+++ b/cplans/home/templates/home/home_page.html
@@ -1,21 +1,17 @@
 {% extends "base.html" %}
-{% load static %}
-
-{% block body_class %}template-homepage{% endblock %}
-
-{% block extra_css %}
-
-{% comment %}
-Delete the line below if you're just getting started and want to remove the welcome screen!
-{% endcomment %}
-<link rel="stylesheet" href="{% static 'css/welcome_page.css' %}">
-{% endblock extra_css %}
+{% load wagtailimages_tags wagtailcore_tags %}
 
 {% block content %}
-
-{% comment %}
-Delete the line below if you're just getting started and want to remove the welcome screen!
-{% endcomment %}
-{% include 'home/welcome_page.html' %}
-
-{% endblock content %}
+<div id="landing-root" class="flex flex-col items-center justify-center min-h-screen bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+    {% if page.blogger_photo %}
+        <div class="mb-6">
+            {% image page.blogger_photo fill-200x200 class="rounded-full shadow-lg border-4 border-white" alt="Blogger photo" %}
+        </div>
+    {% endif %}
+    <h1 class="text-4xl font-extrabold text-gray-900 mb-4 text-center">{{ page.main_heading }}</h1>
+    <div class="prose prose-lg text-gray-700 text-center max-w-2xl mb-8">
+        {{ page.landing_text|richtext }}
+    </div>
+    <!-- React can hydrate here if needed -->
+</div>
+{% endblock %}
